Fix for location icon not fully showing on mobile

--- a/app/css/gym_rides.scss
+++ b/app/css/gym_rides.scss
@@ -4,6 +4,7 @@
     padding-left: rem-calc(40px);
     background-repeat: no-repeat;
     background-size: 16px;
+    min-height: 16px;
     background-position: left center;
     background-position-x: rem-calc(12px);
     background-image: url('/img/location.svg');
